<resources>
    <string name="app_name">Scorrer</string>
    <string name="new_registration">Register</string>
    <string name="username">Anonymous</string>
    <string name="profile_details">View Profile</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="cricket_button">CRICKET</string>
    <string name="soccer_button">SOCCER</string>
    <string name="tennis_button">TENNIS</string>
    <string name="hockey_button">HOCKEY</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_name_hint">Team Name</string>
    <string name="opposition_team_name_hint">Opposition Team Name</string>
    <string name="add_team_button">ADD</string>
    <string name="prev_button">PREVIOUS</string>
    <string name="next_button">NEXT</string>
    <string name="log_in">LOG IN</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="register">Register</string>
    <string name="select_username_hint">Select your username</string>
    <string name="select_password_hint">Select your password</string>
    <string name="password_repeat_hint">Enter your password again</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_hint">Enter your email</string>
    <string name="mobile_no_hint">Enter your mobile number</string>
    <string name="country_hint">Enter your country</string>
    <string name="user_data_file">UserDataFile</string>
    <string name="team_mate_hint">Add your team member</string>
    <string name="opposite_team_mate_hint">Add opposition team member</string>
    <string name="add_team_mate_button">ADD</string>
    <string name="cricket_overs">Specify the number of overs</string>
    <string name="runs">Runs</string>
    <string name="balls">Balls</string>
    <string name="fours">4s</string>
    <string name="sixes">6s</string>
    <string name="overs">Overs</string>
    <string name="wickets">Wickets</string>
    <string name="ecoR">Eco R</string>
    <string name="proceed">Proceed</string>
    <string name="not_out">Not Out</string>
    <string name="time">Specify Time</string>
    <string name="bench">BENCH</string>
    <string name="statistics">STATISTICS</string>
    <string name="match_highlights">HIGHLIGHTS</string>
</resources>
