<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:layout="http://schemas.android.com/apk/res-auto"
    tools:context="com.scorrer.ravi.scorrer.RegisterActivity"
    android:id="@+id/register_layout">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                style="@style/InputFields"
                android:id="@+id/username_input"
                android:hint="@string/select_username_hint"
                android:layout_marginBottom="@dimen/register_input_field_margin"/>
            <EditText
                style="@style/InputFields"
                android:inputType="textPassword"
                android:id="@+id/password_input"
                android:layout_below="@+id/username_input"
                android:hint="@string/select_password_hint"
                android:layout_marginBottom="@dimen/register_input_field_margin"/>
            <EditText
                style="@style/InputFields"
                android:inputType="textPassword"
                android:id="@+id/password_repeat"
                android:layout_below="@+id/password_input"
                android:hint="@string/password_repeat_hint"
                android:layout_marginBottom="@dimen/register_input_field_margin"/>
            <EditText
                style="@style/InputFields"
                android:id="@+id/name_input"
                android:layout_below="@+id/password_repeat"
                android:hint="@string/name_hint"
                android:layout_marginBottom="@dimen/register_input_field_margin"/>
            <EditText
                style="@style/InputFields"
                android:inputType="textEmailAddress"
                android:id="@+id/email_input"
                android:layout_below="@+id/name_input"
                android:hint="@string/email_hint"
                android:layout_marginBottom="@dimen/register_input_field_margin"/>
            <EditText
                style="@style/InputFields"
                android:inputType="number"
                android:id="@+id/mobile_no_input"
                android:layout_below="@+id/email_input"
                android:hint="@string/mobile_no_hint"
                android:layout_marginBottom="@dimen/register_input_field_margin"/>
            <EditText
                style="@style/InputFields"
                android:id="@+id/country_input"
                android:layout_below="@+id/mobile_no_input"
                android:hint="@string/country_hint"
                android:layout_marginBottom="@dimen/register_input_field_margin"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/country_input"
                android:layout_centerHorizontal="true"
                android:background="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:id="@+id/register_button"
                android:text="@string/register"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
