<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scorrer.ravi.scorrer.LogInActivity"
    android:id="@+id/log_in_layout">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                style="@style/InputFields"
                android:id="@+id/username"
                android:hint="@string/username_hint"
                android:layout_marginTop="@dimen/log_in_input_field_margin"/>
            <EditText
                style="@style/InputFields"
                android:id="@+id/password"
                android:layout_below="@+id/username"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/log_in_input_field_margin"/>
            <Button
                android:id="@+id/log_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:background="@color/colorButton"
                android:text="@string/log_in"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/log_in_input_field_margin"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
