<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.scorrer.ravi.scorrer.HomeActivity"
        android:id="@+id/home_layout">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar">
        </include>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_menu"
            android:layout_below="@+id/toolbar"
            android:layout_margin="5dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first_row"
                android:orientation="horizontal">
                <Button
                    style="@style/MenuItems"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/cricket_ball"
                    android:text="@string/cricket_button"
                    android:id="@+id/cricket_button"/>
                <Button
                    style="@style/MenuItems"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/soccer_ball"
                    android:text="@string/soccer_button"
                    android:id="@+id/soccer_button"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_row"
                android:orientation="horizontal">
                <Button
                    style="@style/MenuItems"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/tennis_ball"
                    android:text="@string/tennis_button"
                    android:id="@+id/tennis_button"/>
                <Button
                    style="@style/MenuItems"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/golf_ball"
                    android:text="@string/hockey_button"
                    android:id="@+id/hockey_button"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:layout_gravity="start">
        <RelativeLayout
            android:id="@+id/profile_box"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:padding="8dp"
            android:background="@drawable/profile_bg">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="4dp"
                    android:text="@string/profile_details"
                    android:textColor="#fff"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
        <ListView
            android:id="@+id/nav_list"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/profile_box"
            android:choiceMode="singleChoice"
            android:background="#ffffffff" />
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
