<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2,3,4,4">
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/greenBG">
                <TextView
                    android:text=""
                    android:layout_column="1"
                    android:textSize="@dimen/score_brief_table_text_size"/>
                <TextView
                    android:text="@string/runs"
                    android:layout_column="2"
                    android:textSize="@dimen/score_brief_table_text_size"/>
                <TextView
                    android:text="@string/balls"
                    android:layout_column="3"
                    android:textSize="@dimen/score_brief_table_text_size"/>
                <TextView
                    android:text="@string/fours"
                    android:layout_column="4"
                    android:textSize="@dimen/score_brief_table_text_size"/>
                <TextView
                    android:text="@string/sixes"
                    android:layout_column="5"
                    android:textSize="@dimen/score_brief_table_text_size"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_column="1"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/first_batsman_username"/>
                <TextView
                    android:layout_column="2"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/first_batsman_runs"/>
                <TextView
                    android:layout_column="3"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/first_batsman_balls"/>
                <TextView
                    android:layout_column="4"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/first_batsman_fours"/>
                <TextView
                    android:layout_column="5"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/first_batsman_sixes"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_column="1"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/second_batsman_username"/>
                <TextView
                    android:layout_column="2"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/second_batsman_runs"/>
                <TextView
                    android:layout_column="3"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/second_batsman_balls"/>
                <TextView
                    android:layout_column="4"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/second_batsman_fours"/>
                <TextView
                    android:layout_column="5"
                    android:textSize="@dimen/score_brief_table_text_size"
                    android:id="@+id/second_batsman_sixes"/>
            </TableRow>
        </TableLayout>
</LinearLayout>